nobase_pkginclude_HEADERS = config.hpp cookie.hpp distinct.hpp endpoint.hpp \
	error.hpp file.hpp fileset.hpp forward.hpp http_date.hpp http_error.hpp \
	http_method.hpp http_status.hpp logger.hpp paramset.hpp request.hpp \
	request_handler.hpp response.hpp server.hpp statistics.hpp typedefs.hpp \
	urlencode.hpp details/context.hpp details/cookie_impl.hpp \
	details/default_invoker.hpp details/endpoint_impl.hpp \
	details/fastcgi.hpp details/fatal_error.hpp details/file_impl.hpp \
	details/fileset_impl.hpp details/functors.hpp \
	details/generic_request.hpp details/generic_response.hpp \
	details/iter_file.hpp details/iter_streambuf.hpp details/iterator.hpp \
	details/line_end_filter.hpp details/paramset_impl.hpp \
	details/post_buffer.hpp details/range.hpp details/request_parser.hpp \
	details/resource.hpp details/runtime_error.hpp details/server_impl.hpp \
	details/standard_handler.hpp details/standard_request.hpp \
	details/standard_response.hpp details/statistics_impl.hpp \
	details/strings.hpp details/threaded_acceptor.hpp \
	details/threaded_invoker.hpp details/tokenizer.hpp \
	details/urlencode_impl.hpp details/urltree.hpp
